# transformers-course

./: README.md  pyproject.toml
src/torch/: 01.py
src/transformers_course/01/: 01.py  03.py  04.py  05.py
src/transformers_course/test/: 01.py
