[project]
name = "transformers-course"
version = "0.1.0"
description = ""
authors = [
    {name = "dongkang",email = "docryze@163.com"}
]
readme = "README.md"
requires-python = "==3.12.0"
dependencies = [
    "torch (==2.2.2)",
    "numpy (<2.0)",
    "transformers (>=4.53.2,<5.0.0)"
]

[tool.poetry]
packages = [{include = "transformers_course", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
